--- a/index.css
+++ b/index.css
@@ -85,7 +85,7 @@
 
 @font-face {
   font-family: "Nunito";
-  src: url("/src/assets/fonts/nunito.ttf") format("truetype");
+  src: url("/public/fonts/nunito.ttf") format("truetype");
 }
 
 html,
